gitignore: ignore tmp_* scratch dirs

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ checksums*.sha256
 evidence_pack*.zip
 stress_*.csv
 
+# ============================================================
+# Local scratch dirs (never commit)
+# ============================================================
+tmp_*/
+
