--- a/.github/workflows/publish_stress_pack.yml
+++ b/.github/workflows/publish_stress_pack.yml
@@ -15,6 +15,10 @@ on:
       tag:
         description: "Release tag to create/update. Example: stress-10k-2026-01-05"
         required: true
+      physics_mode:
+        description: "Physics operator mode for hetero2-batch: topological|hamiltonian|both"
+        required: false
+        default: "topological"
       rows:
         description: "Number of rows to generate in stress CSV"
         required: true
@@ -76,6 +80,7 @@ jobs:
             --out_dir out_stress \
             --artifacts light \
             --score_mode mock \
+            --physics_mode ${{ inputs.physics_mode }} \
             --k_decoys ${{ inputs.k_decoys }} \
             --workers ${{ inputs.workers }} \
             --timeout_s ${{ inputs.timeout_s }} \
@@ -103,7 +108,7 @@ jobs:
 
           - Source ref: ${{ inputs.ref }}
           - Batch (repro):
-            hetero2-batch --input stress.csv --out_dir out_stress --artifacts light --score_mode mock --k_decoys ${{ inputs.k_decoys }} --workers ${{ inputs.workers }} --timeout_s ${{ inputs.timeout_s }} --maxtasksperchild 100 --seed_strategy per_row --seed ${{ inputs.seed }} --zip_pack
+            hetero2-batch --input stress.csv --out_dir out_stress --artifacts light --score_mode mock --physics_mode ${{ inputs.physics_mode }} --k_decoys ${{ inputs.k_decoys }} --workers ${{ inputs.workers }} --timeout_s ${{ inputs.timeout_s }} --maxtasksperchild 100 --seed_strategy per_row --seed ${{ inputs.seed }} --zip_pack
           - Pack: summary.csv, metrics.json, index.md, manifest.json, checksums.sha256, evidence_pack.zip
           - SHA256(evidence_pack.zip): ${{ steps.hash.outputs.sha256 }}
           EOF
@@ -135,21 +140,11 @@ jobs:
             out_stress/evidence_pack.zip.sha256
             release_notes.md
 
-  publish-release:
-    needs: build-pack
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: evidence-pack
-          path: .
-
       - name: Create/Update GitHub Release + upload asset
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ inputs.tag }}
-          target_commitish: ${{ needs.build-pack.outputs.source_sha }}
+          target_commitish: ${{ steps.meta.outputs.source_sha }}
           name: "stress_10k light evidence pack (ERROR=0)"
           body_path: release_notes.md
           prerelease: ${{ inputs.prerelease }}
@@ -160,14 +155,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  registry-pr:
-    needs: [build-pack, publish-release]
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: "main"
+      - name: Checkout main (for registry PR base)
+        run: |
+          git fetch origin main
+          git checkout main
 
       - name: Update artefacts registry (append)
         run: |
@@ -182,11 +173,11 @@ jobs:
 
           ## ${{ inputs.tag }}
 
-          - Source commit: ${{ needs.build-pack.outputs.source_sha }}
-          - Release asset: ${{ needs.build-pack.outputs.asset_url }}
-          - SHA256(evidence_pack.zip): ${{ needs.build-pack.outputs.sha256 }}
+          - Source commit: ${{ steps.meta.outputs.source_sha }}
+          - Release asset: ${{ steps.meta.outputs.asset_url }}
+          - SHA256(evidence_pack.zip): ${{ steps.hash.outputs.sha256 }}
           - Command:
-            hetero2-batch --input stress.csv --out_dir out_stress --artifacts light --score_mode mock --k_decoys ${{ inputs.k_decoys }} --workers ${{ inputs.workers }} --timeout_s ${{ inputs.timeout_s }} --maxtasksperchild 100 --seed_strategy per_row --seed ${{ inputs.seed }} --zip_pack
+            hetero2-batch --input stress.csv --out_dir out_stress --artifacts light --score_mode mock --physics_mode ${{ inputs.physics_mode }} --k_decoys ${{ inputs.k_decoys }} --workers ${{ inputs.workers }} --timeout_s ${{ inputs.timeout_s }} --maxtasksperchild 100 --seed_strategy per_row --seed ${{ inputs.seed }} --zip_pack
           EOF
 
       - name: Create PR with registry update
@@ -208,7 +199,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
-          BRANCH: "automation/artefact-${{ inputs.tag }}"
+          BRANCH: ${{ steps.registry_cpr.outputs.pull-request-branch }}
           PR_URL: ${{ steps.registry_cpr.outputs.pull-request-url }}
         run: |
           set -euo pipefail
