--- a/.github/workflows/publish_physics_large_scale_proof.yml
+++ b/.github/workflows/publish_physics_large_scale_proof.yml
@@ -195,7 +195,71 @@ jobs:
       - name: Validate zip (no unpack)
         run: |
           python -m zipfile -t out_physics_large_scale/physics_large_scale_evidence_pack.zip
-          python -m zipfile -l out_physics_large_scale/physics_large_scale_evidence_pack.zip | grep -E "manifest.json|checksums.sha256|metrics.json|index.md|summary.csv|summary_metadata.json|fixtures_polymer_scale.csv|speedup_vs_n.csv|speedup_vs_n.md"
+          python -m zipfile -l out_physics_large_scale/physics_large_scale_evidence_pack.zip | grep -E "manifest.json|checksums.sha256|metrics.json|index.md|summary.csv|summary_metadata.json|fixtures_polymer_scale.csv|speedup_vs_n.csv|speedup_vs_n.md|integration_compare.csv|integration_speed_profile.csv|adaptive_integration_trace.csv|adaptive_integration_summary.json"
+
+      - name: "Gate: P5.1 contract metadata/verdict"
+        run: |
+          python - << 'PY'
+          import csv
+          import json
+          import math
+
+          md = json.load(open("out_physics_large_scale/summary_metadata.json", "r", encoding="utf-8"))
+
+          required = [
+            "law_ref",
+            "integrator_mode",
+            "integrator_energy_min",
+            "integrator_energy_max",
+            "integrator_energy_points",
+            "integrator_eta",
+            "integrator_eps_abs",
+            "integrator_eps_rel",
+            "gate_n_min",
+            "correctness_gate_rate",
+            "min_scale_samples",
+            "integrator_valid_row_fraction",
+            "integrator_correctness_pass_rate_at_scale",
+            "integrator_speedup_median_at_scale",
+            "integrator_eval_ratio_median_at_scale",
+            "integrator_correctness_verdict",
+            "integrator_speedup_verdict",
+            "integrator_verdict_reason",
+            "potential_unit_model",
+            "potential_scale_gamma",
+          ]
+          missing = [k for k in required if k not in md]
+          assert not missing, f"Missing required P5.1 metadata keys: {missing}"
+
+          law = md.get("law_ref") or {}
+          assert law.get("contract_path") == "docs/contracts/INTEGRATION_SCALE_CONTRACT.md"
+          assert law.get("contract_version") == "p5.1.v1"
+          assert str(law.get("contract_commit") or "")
+
+          gate_n_min = int(md.get("gate_n_min", 0) or 0)
+          min_scale_samples = int(md.get("min_scale_samples", 0) or 0)
+          speedup_gate = float(md.get("scale_speedup_gate_break_even", 1.0) or 1.0)
+
+          n_scale = 0
+          with open("out_physics_large_scale/fixtures_polymer_scale.csv", "r", encoding="utf-8", newline="") as f:
+            for row in csv.DictReader(f):
+              if int(row.get("n_atoms", 0) or 0) >= gate_n_min:
+                n_scale += 1
+
+          corr_v = str(md.get("integrator_correctness_verdict") or "")
+          sp_v = str(md.get("integrator_speedup_verdict") or "")
+          sp_med = float(md.get("integrator_speedup_median_at_scale", float("nan")))
+
+          if corr_v != "PASS_CORRECTNESS_AT_SCALE":
+            assert sp_v == "NOT_VALID_DUE_TO_CORRECTNESS"
+          else:
+            if n_scale < min_scale_samples:
+              assert sp_v == "INCONCLUSIVE_NOT_ENOUGH_SCALE_SAMPLES"
+            else:
+              assert math.isfinite(sp_med), "speedup_median_at_scale must be finite when |S| is sufficient"
+              expected = "PASS_SPEEDUP_AT_SCALE" if sp_med >= speedup_gate else "FAIL_SPEEDUP_AT_SCALE"
+              assert sp_v == expected, f"speedup_verdict mismatch: got={sp_v} expected={expected} gate={speedup_gate} median={sp_med}"
+          PY
 
       - name: Extract facts (from summary_metadata.json)
         id: facts
@@ -207,6 +271,21 @@ jobs:
           md = json.load(open("out_physics_large_scale/summary_metadata.json", "r", encoding="utf-8"))
           bins = md.get("scale_bins", [])
           lines = []
+          law = md.get("law_ref", {}) if isinstance(md, dict) else {}
+          lines.append("  - law_ref:")
+          lines.append(f"    - contract_path: {law.get('contract_path')}")
+          lines.append(f"    - contract_commit: {law.get('contract_commit')}")
+          lines.append(f"    - contract_version: {law.get('contract_version')}")
+          lines.append("  - integrator (P5.1):")
+          lines.append(f"    - gate_n_min: {md.get('gate_n_min')}")
+          lines.append(f"    - correctness_gate_rate: {md.get('correctness_gate_rate')}")
+          lines.append(f"    - min_scale_samples: {md.get('min_scale_samples')}")
+          lines.append(f"    - integrator_correctness_pass_rate_at_scale: {md.get('integrator_correctness_pass_rate_at_scale')}")
+          lines.append(f"    - integrator_speedup_median_at_scale: {md.get('integrator_speedup_median_at_scale')}")
+          lines.append(f"    - integrator_eval_ratio_median_at_scale: {md.get('integrator_eval_ratio_median_at_scale')}")
+          lines.append(f"    - integrator_correctness_verdict: {md.get('integrator_correctness_verdict')}")
+          lines.append(f"    - integrator_speedup_verdict: {md.get('integrator_speedup_verdict')}")
+          lines.append(f"    - integrator_verdict_reason: {md.get('integrator_verdict_reason')}")
           lines.append("  - scale (P5):")
           lines.append(f"    - scale_n_atoms_min: {md.get('scale_n_atoms_min')}")
           lines.append(f"    - scale_n_atoms_max: {md.get('scale_n_atoms_max')}")
@@ -263,7 +342,7 @@ jobs:
             - quad_order_max: ${{ inputs.integrator_quad_order_max }}
             - eval_budget_max: ${{ inputs.integrator_eval_budget_max }}
             - split_criterion: ${{ inputs.integrator_split_criterion }}
-          - Pack: fixtures_polymer_scale.csv, speedup_vs_n.csv, speedup_vs_n.md, summary.csv, summary_metadata.json, metrics.json, manifest.json, checksums.sha256, physics_large_scale_evidence_pack.zip
+          - Pack: fixtures_polymer_scale.csv, speedup_vs_n.csv, speedup_vs_n.md, integration_compare.csv, integration_speed_profile.csv, adaptive_integration_trace.csv, adaptive_integration_summary.json, summary.csv, summary_metadata.json, metrics.json, manifest.json, checksums.sha256, physics_large_scale_evidence_pack.zip
           - SHA256(physics_large_scale_evidence_pack.zip): ${{ steps.hash.outputs.sha256 }}
           - Outcome (facts from summary_metadata.json):
           ${{ steps.facts.outputs.facts_md }}
